templates/radar-rest-sources-authorizer_template.yaml
---
# Source: radar-rest-sources-authorizer/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-radar-rest-sources-authorizer
  labels:
    helm.sh/chart: radar-rest-sources-authorizer-1.1.3
    app.kubernetes.io/name: radar-rest-sources-authorizer
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.4.0"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-rest-sources-authorizer-1.1.3
      app.kubernetes.io/name: radar-rest-sources-authorizer
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "4.4.0"
      app.kubernetes.io/managed-by: Helm
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: radar-rest-sources-authorizer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radar-rest-sources-authorizer
  labels:
    helm.sh/chart: radar-rest-sources-authorizer-1.1.3
    app.kubernetes.io/name: radar-rest-sources-authorizer
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.4.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radar-rest-sources-authorizer
    app.kubernetes.io/instance: release-name
---
# Source: radar-rest-sources-authorizer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radar-rest-sources-authorizer
  labels:
    helm.sh/chart: radar-rest-sources-authorizer-1.1.3
    app.kubernetes.io/name: radar-rest-sources-authorizer
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.4.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-rest-sources-authorizer
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radar-rest-sources-authorizer
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-rest-sources-authorizer
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: radar-rest-sources-authorizer
          securityContext:
            {}
          image: "radarbase/radar-rest-source-authorizer:4.4.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /rest-sources/authorizer/
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /rest-sources/authorizer/
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: radar-rest-sources-authorizer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-radar-rest-sources-authorizer
  labels:
    helm.sh/chart: radar-rest-sources-authorizer-1.1.3
    app.kubernetes.io/name: radar-rest-sources-authorizer
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.4.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-radar-rest-sources-authorizer
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/rest-sources/authorizer"
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-radar-rest-sources-authorizer
                port:
                  number: 8080
---
# Source: radar-rest-sources-authorizer/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-radar-rest-sources-authorizer-test-connection"
  labels:
    app.kubernetes.io/name: radar-rest-sources-authorizer
    helm.sh/chart: radar-rest-sources-authorizer-1.1.3
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-radar-rest-sources-authorizer:8080']
  restartPolicy: Never
